# Captcha_Model_Training

./: .gitignore  README.md  api.py  charset.py  check_random_samples.py  dataset.py  evaluate_model.py  garena_captcha.py  label.py  model.py  predict.py  pyproject.toml  requirements.txt  server.py  train.py
