[project]
name = "captcha-model-training"
version = "0.1.0"
description = "GPU captcha solver training pipeline"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "Pillow",
    "numpy",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
